@@ -2,7 +2,7 @@
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "HTTP::Status" => "0";
-requires "List::Util" => "1.39";
+requires "List::Util" => "1.29";
 requires "Module::Load" => "0";
 requires "Net::IP::Match::Trie" => "0";
 requires "Plack::Middleware" => "0";
